--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <restaurant>
+    <link rel="stylesheet" href="styles.css">
     <name>Brasa & Bord</name>
     
     <info>
