--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="about" class="content">
         <h2>Om oss</h2>
         <p><strong>Boka bord:</strong> Tel: 08-123 456 78 | Email: kontakt@brasabord.se</p>
-        <p>Brasa & Bord är en modern bistro med fokus på nordiska råvaror och klassiska smaker med en modern twist. Restaurangen ligger i en charmig stadsdel, gärna nära vatten eller i en historisk byggnad med rustik inredning. Atmosfären är varm och inbjudande med en mix av industriella och trädetaljer, mjuk belysning och öppet kök för en levande matupplevelse. Vår personal är proffsig men avslappnad och har stor kunskap om både mat och vin, vilket bidrar till den genomtänkta helhetsupplevelsen. Oavsett om du kommer för en affärslunch, en middag med vänner eller en romantisk kväll, är vi här för att ge dig den bästa upplevelsen.</p>
+        <p>Brasa & Bord är en modern bistro med fokus på nordiska råvaror och klassiska smaker med en modern twist. Restaurangen ligger i en charmig stadsdel, precis intil vattnet i en historisk byggnad med rustik inredning. Atmosfären är varm och inbjudande med en mix av industriella och trädetaljer, mjuk belysning och öppet kök för en levande matupplevelse. Vår personal är proffsig men avslappnad och har stor kunskap om både mat och vin, vilket bidrar till den genomtänkta helhetsupplevelsen. Oavsett om du kommer för en affärslunch, en middag med vänner eller en romantisk kväll, är vi här för att ge dig den bästa upplevelsen.</p>
     </div>
 
     <div id="menu" class="content">
@@ -27,7 +27,7 @@
         <p><strong>Toast Skagen – 135 kr</strong><br> Riesling, Dr. Loosen – 110 kr (glas)</p>
 
         <h3>Varmrätter</h3>
-        <p><strong>Grillad Entrecôte (200g) – 275 kr</strong><br> Amarone della Valpolicella, Zenato – 150 kr (glas)</p>
+        <p><strong>Grillad Entrecôte (200g) – 369 kr</strong><br> Amarone della Valpolicella, Zenato – 150 kr (glas)</p>
         <p><strong>Torskrygg (170g) – 255 kr</strong><br> Albariño, Mar de Frades – 125 kr (glas)</p>
         <p><strong>Högrevsburgare (160g) – 195 kr</strong><br> Zinfandel, Seghesio Sonoma – 120 kr (glas)</p>
         <p><strong>Halloumiburgare – 185 kr</strong><br> Grenache, Domaine Lafage – 115 kr (glas)</p>
